# metin2-server

./: .dockerignore  .gitignore  Dockerfile
.github/workflows/: deploy.yml
docker/: docker-entrypoint.sh
docker/conf/: db.conf.tmpl  game.conf.tmpl
gamefiles/conf/: CMD
gamefiles/data/: locale_string_cz.txt  locale_string_de.txt  locale_string_dk.txt  locale_string_es.txt  locale_string_fr.txt  locale_string_gr.txt  locale_string_hu.txt  locale_string_it.txt  locale_string_kr.txt  locale_string_nl.txt  locale_string_pl.txt  locale_string_pt.txt  locale_string_ro.txt  locale_string_ru.txt  locale_string_tr.txt
gamefiles/data/quest/: quest_functions  questing.lua
src/common/: VnumHelper.h  auction_table.h  building.h  item_length.h  length.h  stl.h  tables.h
src/db/: CMakeLists.txt
src/db/src/: AuctionManager.cpp  AuctionManager.h  Cache.cpp  Cache.h  ClientManager.cpp  ClientManager.h  ClientManagerBoot.cpp  ClientManagerGuild.cpp  ClientManagerLogin.cpp  ClientManagerPlayer.cpp  Config.cpp  CsvReader.cpp  CsvReader.h  DBManager.h  GuildManager.cpp  GuildManager.h  ItemAwardManager.cpp  LoginData.cpp  LoginData.h  Main.cpp  Marriage.cpp  Marriage.h  Monarch.cpp  Peer.h  PrivManager.cpp  PrivManager.h  ProtoReader.cpp  ProtoReader.h  QID.h  grid.cpp
src/game/: CMakeLists.txt
src/game/src/: BattleArena.cpp  DragonLair.cpp  DragonSoul.cpp  DragonSoul.h  IFileMonitor.h  MarkConvert.cpp  MarkImage.cpp  MarkImage.h  MarkManager.cpp  OXEvent.cpp  OXEvent.h  ani.cpp  (+167 more)
src/libgame/: CMakeLists.txt
src/libgame/include/: attribute.h  targa.h
src/libgame/src/: attribute.cc  grid.cc
src/liblua/: CMakeLists.txt
src/libpoly/: CMakeLists.txt
src/libsql/: CMakeLists.txt
src/libsql/include/: CAsyncSQL.h
src/libsql/src/: CAsyncSQL.cpp
src/libthecore/: CMakeLists.txt
src/libthecore/include/: buffer.h  heart.h  main.h  utils.h
src/libthecore/src/: buffer.cpp  heart.cpp  main.cpp  signals.cpp  utils.cpp
src/quest/: CMakeLists.txt
src/quest/src/: qc.cc  quest_functions
